--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 spring.datasource.url=jdbc:h2:mem:testdb
-
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
