--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Logging for console
+logging.pattern.console= %d{dd-MM-yyyy HH:mm:ss} - %logger{36} - %msg%n
+
+# Logging pattern for file
+logging.pattern.file= %d{dd-MM-yyyy HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+
+# Logging file destination
+logging.file.name=c:/temp/application.log
